--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
+src/environments/environment.ts
+src/environments/environment.prod.ts
+src/environments/environment.prod.ts
+src/environments/environment.ts
