--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ src/environments/environment.ts
 src/environments/environment.prod.ts
 src/environments/environment.prod.ts
 src/environments/environment.ts
+src/environments/environment.prod.ts
+src/environments/environment.prod.ts
+src/environments/environment.prod.ts
+src/environments/environment.prod.ts
