--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ src/environments/environment.prod.ts
 src/environments/environment.prod.ts
 src/environments/environment.prod.ts
 src/environments/environment.prod.ts
+src/environments/environment.ts
+src/environments/environment.prod.ts
+src/environments/environment.prod.ts
