--- a/.gitignore
+++ b/.gitignore
@@ -48,14 +48,4 @@ Thumbs.db
 .firebase
 *-debug.log
 .runtimeconfig.json
-src/environments/environment.ts
-src/environments/environment.prod.ts
-src/environments/environment.prod.ts
-src/environments/environment.ts
-src/environments/environment.prod.ts
-src/environments/environment.prod.ts
-src/environments/environment.prod.ts
-src/environments/environment.prod.ts
-src/environments/environment.ts
-src/environments/environment.prod.ts
-src/environments/environment.prod.ts
+src/environments/*
